# agent_compose

./: .env.example  README.md  pyproject.toml
src/agent/: .pre-commit-config.yaml  README.md  main.py
src/agent/analyze_context/: README.md  analyzeAgent.py  models.py  preprocessing.py  test_analyze.py  validation.py
src/agent/analyze_context/tests/: test_analyze.py
src/agent/finance_track/: README.md
src/agent/prompt_management/: prompt_analyze.py  prompt_research.py
src/agent/research/: README.md  researchAgent.py
src/agent/research/tools/: research_news.py
src/agent/supervisor/: README.md
